add message about updating postcode

--- a/configuration/partials/local-contact-info.hbs
+++ b/configuration/partials/local-contact-info.hbs
@@ -8,7 +8,7 @@
   {{else}}
   For help with your account or information on how to get involved,
   {{/if ~}}
-  please contact <strong>{{title}}</strong> who are responsible for the {{@root.context.metaData.title}} {{#if island}}on{{else}}in{{/if}} {{#if area}}{{area}}{{else}}{{../local_authority}}{{/if}}.
+  please contact <strong>{{title}}</strong> who are responsible for the {{@root.context.metaData.title}} {{#if island}}on{{else}}in{{/if}} {{#if area}}{{area}}{{else}}{{../local_authority}}{{/if}}. If you have moved, please update your postcode on your <a href="/account">account</a>.
 </p>
 <p>
   {{#if phone}}Phone: {{phone}}<br />{{/if}}
