--- a/configuration/partials/sdg-label.hbs
+++ b/configuration/partials/sdg-label.hbs
@@ -1,5 +1,5 @@
-{{#compare (length (arrayify sdg)) ">" 1 ~}}
-<abbr class="tooltip tooltip-bottom" data-tooltip="Sustainable Development Goals">SDGs</abbr>: {{#each sdg}}<span class="label label-primary tooltip tooltip-bottom" style="background-color:{{> sdg_color sdg=this}}" data-tooltip="{{this}}"><strong>{{> sdg_number sdg=this}}</strong></span> {{/each}}
+{{#compare (length (arrayify (split sdg ";"))) ">" 1 ~}}
+<abbr class="tooltip tooltip-bottom" data-tooltip="Sustainable Development Goals">SDGs</abbr>: {{#each (split sdg ";")}}<span class="label label-primary tooltip tooltip-bottom" style="background-color:{{> sdg_color sdg=this}}" data-tooltip="{{this}}"><strong>{{> sdg_number sdg=this}}</strong></span> {{/each}}
 {{else}}
 <abbr class="tooltip tooltip-bottom" data-tooltip="Sustainable Development Goal">SDG</abbr>: <span class="label label-primary tooltip tooltip-bottom" style="background-color:{{> sdg_color sdg=sdg}}" data-tooltip="{{sdg}}"><strong>{{> sdg_number sdg=sdg}}</strong></span>
 {{/compare ~}}
