--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -52,7 +52,8 @@
                   <div class="popover-container">
                     <div class="card">
                       <div class="card-header">
-                        <strong>Recently added</strong>
+                        <strong>Recently added</strong>&ensp;
+                        <a href="/hours-log" class="caption">See all</a>
                       </div>
                       <ul class="card-body hours-logged fa-ul">
                         {{#each hours_list ~}}
@@ -77,7 +78,8 @@
                   <div class="popover-container">
                     <div class="card">
                       <div class="card-header">
-                        <strong>Recently added</strong>
+                        <strong>Recently added</strong>&ensp;
+                        <a href="/hours-log" class="caption">See all</a>
                       </div>
                       <ul class="card-body hours-logged fa-ul">
                         {{#each hours_list ~}}
