--- a/configuration/templates/volunteering/verify-hours-fail.hbs
+++ b/configuration/templates/volunteering/verify-hours-fail.hbs
@@ -4,7 +4,7 @@
   </div>
   <p class="empty-title h5">Volunteering verification</p>
   <p class="empty-subtitle">
-    <strong>Volunteering hours could not be verified.</strong> This may be because the hours have already been verified.
+    <strong>Volunteering hours could not be verified.</strong> This may be because the request email was re-sent.
   </p>
   <p class="empty-subtitle">
     Please <a href="/contact">contact us</a> if you think this is incorrect.
