better filenames for generated certificates

--- a/configuration/partials/log-hours-info.hbs
+++ b/configuration/partials/log-hours-info.hbs
@@ -9,7 +9,7 @@
 
 {{#ifAll (compare (sumArray (pluck @root.data.tasksInfo "hours")) 0) (compare (dateMath 'now-26y') "<" (moment @root.data.accountInfo.date_of_birth "YYYY-MM-DD")) ~}}
 <p class="empty-subtitle">
-  The Saltire Awards gives you recognition for the volunteering you do.
+  {{@root.context.metaData.fullTitle}} gives you recognition for the volunteering you do.
 </p>
 {{/ifAll ~}}
 
