--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -198,7 +198,7 @@
           </div>
           <div class="column col-1 hide-xl"></div>
           <div class="column col-2 col-xl-3 col-lg-4 col-md-6 col-sm-8 col-xs-9">
-            <a href="/group-certificate/{{task_id}}/" class="btn btn-primary btn-block b-margin" download>Download all</a>
+            <a href="/group-certificate/{{task_id}}" class="btn btn-primary btn-block b-margin">Download all</a>
           </div>
         </div>
         {{#each hours_list ~}}
@@ -251,7 +251,7 @@
               {{/if ~}}
             </div>
             <div class="column col-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
-              <a href="/group-certificate/{{../task_id}}/{{hours_id}}" class="btn btn-block b-margin" download>Download</a>
+              <a href="/group-certificate/{{../task_id}}/{{hours_id}}" class="btn btn-block b-margin">Download</a>
             </div>
             <div class="column col-1 col-xl-2 col-lg-2 col-md-3 col-sm-4">
               {{#if claim_code ~}}
